--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pyodbc>=5.2.0",
     "sqlalchemy>=2.0.43",
     "pandas>=2.3.2",
+    "msal==1.20.0b1",
 ]
 
 [project.urls]
