--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cnxns"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
   { name="n3ddu8", email="n3ddu8@proton.me" },
 ]
@@ -22,6 +22,7 @@ dependencies = [
     "pyodbc>=5.2.0",
     "sqlalchemy>=2.0.43",
     "pandas>=2.3.2",
+    "msal==1.20.0b1",
 ]
 
 [project.urls]
