--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,7 +1,8 @@
 {
-  "name": "ingest-small",
-  "image": "mcr.microsoft.com/devcontainers/python:3",
+  "name": "cnxns",
+  "image": "mcr.microsoft.com/devcontainers/python:3-bookworm",
   "features": {
-    "ghcr.io/devcontainers/features/nix:1": {}
+    "ghcr.io/devcontainers-extra/features/neovim-homebrew:1": {},
+    "ghcr.io/devcontainer-community/devcontainer-features/chezmoi.io:1": {}
   }
 }
